_ops/prod/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: lgtm-garukun-golgtm
  labels:
    app: lgtm
    repo: "garukun-golgtm"
    tier: tool
spec:
  strategy:
    rollingUpdate:
      maxSurge: 200%
      maxUnavailable: 10%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lgtm
        repo: "garukun-golgtm"
        tier: tool
    spec:
      containers:
        - name: lgtm-garukun-golgtm
          image: garukun/golgtm:1.2.1
          imagePullPolicy: Always
          args:
            - -port=8080
            - -debugport=6689
          resources:
            limits:
              cpu: 50m
              memory: 200Mi
      terminationGracePeriodSeconds: 5
